--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Qimao Chen"
-description              : "Undergrad Student at Department of Automation, Tsinghua University. Focusing on Reinforcement Learning and Autonomous Driving."
+description              : "Master Student at Department of Automation, Tsinghua University. Focusing on Autonomous Driving."
 repository               : "BlueCat-de/BlueCat-de.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -51,7 +51,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/Bluecat52239113"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
